Font loading emulator alignment issue

--- a/web/css/_fontloademu.scss
+++ b/web/css/_fontloademu.scss
@@ -8,7 +8,6 @@
 	margin: 0;
 }
 .fontloademu legend {
-	float: left;
 	padding: 0;
 	margin: 0;
 }
@@ -18,6 +17,9 @@
 	margin-left: .5em;
 }
 @media (min-width: 37.5em) {
+	.fontloademu legend {
+		float: left;
+	}
 	.fontloademu label {
 		display: inline-block;
 	}
